# xml2xlsx

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  docs.yml
dev-docs/: .buildinfo  conf.py  genindex.html  index.html  objects.inv  search.html  searchindex.js
dev-docs/_sources/: index.rst.txt
dev-docs/_sources/adr/: adr-001-xml-conversion-design-principles.rst.txt  adr-004-library-selection-and-implementation.rst.txt  adr-005-xml-path-and-sheet-name-handling.rst.txt  adr-006-full-xml-path-and-warnings.rst.txt  adr-009-test-data-cleanup.rst.txt  index.rst.txt
dev-docs/_sources/architecture/: basic-design.rst.txt  detailed-design.rst.txt
dev-docs/_sources/guides/: development-style.rst.txt  test-specification.rst.txt
dev-docs/adr/: adr-001-xml-conversion-design-principles.html  adr-002-column-name-mapping-location.html  adr-002-column-name-mapping-location.rst  adr-003-configuration-structure-and-data-reference.html  adr-003-configuration-structure-and-data-reference.rst  adr-004-library-selection-and-implementation.html  adr-005-xml-path-and-sheet-name-handling.html  adr-006-full-xml-path-and-warnings.html  adr-007-sheet-integration-strategy.html  adr-007-sheet-integration-strategy.rst  adr-008-flexible-element-reference.html  adr-008-flexible-element-reference.rst  adr-009-test-data-cleanup.html  adr-010-documentation-tool-selection.html  adr-010-documentation-tool-selection.rst  adr-011-documentation-structure-and-format.html  adr-011-documentation-structure-and-format.rst  index.html
dev-docs/architecture/: basic-design.html  detailed-design.html  index.html  index.rst  technical-specification.html  technical-specification.rst
dev-docs/guides/: development-style.html  test-specification.html  testing.html  testing.rst
docs/: .buildinfo  basic-design.md  conf.py  detailed-design.md  development-style.md  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js  technical-specification.md  test-specification.md
docs/_sources/pages/: overview.rst.txt  usage.rst.txt
docs/_sources/pages/api/: index.rst.txt
docs/_sources/usage/: basic.rst.txt
docs/adr/: adr-001-xml-conversion-design-principles.md  adr-002-column-name-mapping-location.md  adr-003-configuration-structure-and-data-reference.md  adr-004-library-selection-and-implementation.md
docs/pages/: installation.html  installation.rst  overview.html  usage.html
docs/pages/api/: config_generator.html  config_generator.rst  converter.html  converter.rst  index.html
docs/pages/development/: index.html  index.rst
docs/usage/: advanced.html  advanced.rst  basic.html  config.html  config.rst
src/xml2xlsx/: __init__.py  __main__.py  cli.py  config.py  config_generator.py  converter.py  entity.py  exceptions.py
tests/: test_cdata.py  test_cli.py  test_collection_detection.py  test_config_generation.py  test_converter.py  test_entity.py  test_large_data.py  test_large_scale.py  test_mapping.py  test_performance.py
tests/test_data/: basic_config.toml  basic_sample.xml  cdata_config.toml  cdata_sample.xml  composite_key_config.toml  composite_key_sample.xml  large_config.toml  large_sample.xml
