[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xml2xlsx"
version = "0.1.0"
description = "Convert XML files to XLSX with entity relationship support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["xml", "excel", "converter"]
authors = [{ name = "hat47x", email = "hat47x@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Office/Business",
]
dependencies = ["pandas>=1.5.0", "openpyxl>=3.0.0", "toml>=0.10.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyproject-flake8>=6.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
    "psutil>=5.8.0",
    "tox>=4.0.0",
]

[project.scripts]
xml2xlsx = "xml2xlsx.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["xml2xlsx"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["pandas.*"]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
per-file-ignores = ["__init__.py:F401", "test_*.py:F401"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
